src/components/intro/intro.scss
@import "../../global.scss";

.intro {
  // background-color: rgb(12, 20, 27);
  display: flex;
  //  scroll-snap-type: y mandatory;
  //  height: calc(100vh - 70px);
    

  @include mobile{
    flex-direction: column;
    align-items: center;
  }

  .left {
    flex: 0.4;
    overflow: hidden;
    position: relative;


    .imgContainer {
      width: 700px;
      height: 700px;
      margin-top: 25px;
      // background-color: crimson;
     
      // border-radius: 50%;
      display: flex;
      align-items: center;
      justify-content: center;
      float: left;
      margin-left: -30px;

      @include mobile{
        align-items: flex-start;
         width: 400px;
         margin: auto;
      height: 500px;
      padding-bottom: 0px;
      }

      img {
        // height: 50%;
        width: 40%;
        border-radius: 80px;
        border-bottom: 10px solid #9802be;
       

        @include mobile{
          // height: 50%;
          width: 80%;
        }
      }
    }
  }
  .right {
    flex: 0.6;
    //position: relative;
    color: rgb(204,214,246);

    .wrapper {
      width: 100%;
      height: 100%;
      padding-left: 180px;
      // margin-top: 70px;
      display: flex;
      flex-direction: column;
      justify-content: center;
    //   &::-webkit-scrollbar{
    //   display: none;
    //   overflow-y: hidden;
    // }

      @include mobile{
        padding-left: 0;
        padding-top: 20px;
        align-items: center;
        margin-top: 70px;
      }
      .btn{
        display: flex;
        width: 150px;
        color: rgb(204, 214, 246);
    background: linear-gradient(
120deg
, rgb(8, 49, 132), rgb(15, 83, 67));
padding: 20px 20px;
    margin: 20px 10px;
    border: 1px solid antiquewhite;
    outline: none;
    border-radius: 5px;
    transition: all .3s ease-in-out;
    cursor: pointer;
    font-size: 18px;
    
        &:hover{
          border-radius: 25px;
        }
        @include mobile{
          // width: 100px;
          // height: 30px;
          font-size: 18px;
    //       padding: 5px 5px;
    // margin: 10px 0px;
        }
    span{
      margin-right: 10px;
      

       @include mobile{
      margin-right: 5px;
      // height: 100%;
      // display: none;
    }
    }
   
        
      }

      h1 {
        font-size: 70px;
        margin: 10px 0;

        @include mobile{
          font-size: 40px;
        }
      }
      h2 {
        font-size: 35px;
      }
      h3 {
        font-size: 30px;

        @include mobile{
          font-size: 20px;
        }

        span {
          font-size: inherit;
          color: crimson;
        }

        .ityped-cursor {
          animation: blink 1s infinite;
        }

        @keyframes blink {
            50%{
                opacity: 1;
            }
            100%{
                opacity: 0;
            }
        }
      }
    }
    a {
      position: absolute;
      bottom: 10px;
      left: 40%;

      img {
        width: 30px;
        animation: arrowBlink 2s infinite;
      }

      @keyframes arrowBlink {
        100% {
          opacity: 0;
        }
      }
    }
  }
}

